added the strip,deals and attractive deals section

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -11,6 +11,7 @@
       href="./images/flipkart-icon.png"
       type="image/x-icon"
     />
+    <script src="https://kit.fontawesome.com/c4338603d0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -24,23 +25,73 @@
         </div>
         <div id="search-box">
             <input id="search-bar" placeholder="Search...."/>
-            <button>S</button>
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
 
         </div>
         <div id="login">
-            <button>Login</button>
+            <button>Login</button> &nbsp;&nbsp;&nbsp;
             <button>SignUp</button>
         </div>
  
     </header>
     <div id="main">
-      <div id="top-strip"></div>
+      <div id="top-strip">
+        <div id="strip-container">
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/72tFJDD/top-offers.png" alt="offer" />
+          <figcaption>Top Offers</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/PZvWQpp/grocery.png" alt="grocery" />
+          <figcaption>Grocery</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/Jptfv9B/mobiles.png" alt="mobiles" />
+          <figcaption>Mobiles</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/NW23z09/fashion.png" alt="fashion" />
+          <figcaption>Fashion</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/JtxLjXB/electronics.png" alt="electronics" />
+          <figcaption>Electronics</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/64kY2Cd/toys.png" alt="toys" />
+          <figcaption>Toys</figcaption>
+        </figure>
+        <figure class="strip-icons">
+          <img src="https://i.ibb.co/X2Tp0Bd/travel.png" alt="travel" />
+          <figcaption>Travel</figcaption>
+        </figure>
+      </div>
+      </div>
         <div id="search-box"></div>
         <div id="login"></div>
       </div>
-      <div id="slider"></div>
-      <div id="deal"></div>
-      <div id="mdeal"></div>
+      <div id="slider">
+        <img src="./images/bd8609a1a3559647.webp" alt="slider">
+      </div>
+      <div class="deal">
+        <h1>Deals of the Day</h1>
+      <hr/>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+      </div>
+      <div class="deal">
+        <h1>Attractive Deals </h1>
+      <hr/>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+        <div class="dealItem"></div>
+      </div>
+      <div class="deal" ></div>
     </div>
     <footer></footer>
   </body>
