--- a/homepage/home.html
+++ b/homepage/home.html
@@ -110,86 +110,189 @@
       <h1>Deals of the Day</h1>
       <hr />
       <div class="owl-carousel owl-theme">
-          <div class="item" id="first">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        <div class="item" id="first">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
-          <div class="item" id="second">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        </div>
+        <div class="item" id="second">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
-          <div class="item" id="third">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        </div>
+        <div class="item" id="third">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
-          <div class="item" id="fourth">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        </div>
+        <div class="item" id="fourth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
-          <div class="item" id="fifth">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        </div>
+        <div class="item" id="fifth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
-          <div class="item" id="sixth">
-            <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc" alt="clothes"/>
-            <div>
-              <p>Blue T-Shirt Men</p>
-              <span>Min 77% off</span>
-            </div>
+        </div>
+        <div class="item" id="sixth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
           </div>
+        </div>
       </div>
 
-        <!-- <div class="dealItem"></div>
+      <!-- <div class="dealItem"></div>
         <div class="dealItem"></div>
         <div class="dealItem"></div>
         <div class="dealItem"></div>
         <div class="dealItem"></div> -->
+    </div>
+    <div class="deal">
+      <h1>Attractive Deals</h1>
+      <hr />
+      <div class="owl-carousel owl-theme">
+        <div class="item" id="first">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
+        <div class="item" id="second">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
+        <div class="item" id="third">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
+        <div class="item" id="fourth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
+        <div class="item" id="fifth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
+        <div class="item" id="sixth">
+          <img
+            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
+            alt="clothes"
+          />
+          <div>
+            <p>Blue T-Shirt Men</p>
+            <span>Min 77% off</span>
+          </div>
+        </div>
       </div>
-      <div class="deal">
-        <h1>Attractive Deals</h1>
-        <hr />
-        <div class="dealItem" id="first" src="./images//deal-2.webp"></div>
-        <div class="dealItem" id="second" src="./images//deal-2.webp"></div>
-        <div class="dealItem" id="third" src="./images/deal-3.webp"></div>
-        <div class="dealItem" id="fourth" src="./images/deal-4.webp"></div>
-        <div class="dealItem" id="fifth" src="./images/deal-5.webp"></div>
-      </div>
-      <div class="deal"></div>
     </div>
     <footer>
-      <script>
-        $('.owl-carousel').owlCarousel({
-            loop:true,
-            margin:10,
-            nav:true,
-            responsive:{
-                0:{
-                    items:1
-                },
-                600:{
-                    items:3
-                },
-                1000:{
-                    items:5
-                }
-            }
-        })
-    </script>
+      <div id="mainFoot">
+        <div class="footCol">
+          <h5>About</h5>
+          <a>Contact Us</a>
+          <a>About Us</a>
+        </div>
+        <div class="footCol">
+          <h5>Help</h5>
+          <a>Contact Us</a>
+          <a>About Us</a>
+        </div>
+        <div class="footCol">
+          <h5>Policy</h5>
+          <a>Contact Us</a>
+          <a>About Us</a>
+        </div>
+        <div class="footCol">
+          <h5>Mail us</h5>
+          <a>Contact Us</a>
+          <a>About Us</a>
+        </div>
+        <div class="footCol">
+          <h5>Registered office Address</h5>
+          <a>Contact Us</a>
+          <a>About Us</a>
+        </div>
+      </div>
+      <hr />
+      <p>&copy Surya Teja Ganta</p>
     </footer>
+
+    <script>
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 3,
+          },
+          1000: {
+            items: 5,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
