--- a/listingpage/home.html
+++ b/listingpage/home.html
@@ -64,185 +64,11 @@
         <button>SignUp</button>
       </div>
     </header>
-    <div id="main">
-      <div id="top-strip">
-        <div id="strip-container">
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/72tFJDD/top-offers.png" alt="offer" />
-            <figcaption>Top Offers</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/PZvWQpp/grocery.png" alt="grocery" />
-            <figcaption>Grocery</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/Jptfv9B/mobiles.png" alt="mobiles" />
-            <figcaption>Mobiles</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/NW23z09/fashion.png" alt="fashion" />
-            <figcaption>Fashion</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img
-              src="https://i.ibb.co/JtxLjXB/electronics.png"
-              alt="electronics"
-            />
-            <figcaption>Electronics</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/64kY2Cd/toys.png" alt="toys" />
-            <figcaption>Toys</figcaption>
-          </figure>
-          <figure class="strip-icons">
-            <img src="https://i.ibb.co/X2Tp0Bd/travel.png" alt="travel" />
-            <figcaption>Travel</figcaption>
-          </figure>
-        </div>
-      </div>
-      <div id="search-box"></div>
-      <div id="login"></div>
-    </div>
-    <div id="slider">
-      <img src="./images/bd8609a1a3559647.webp" alt="slider" />
-    </div>
-    <div class="deal">
-      <h1>Deals of the Day</h1>
-      <hr />
-      <div class="owl-carousel owl-theme">
-        <div class="item" id="first">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="second">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="third">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="fourth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="fifth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="sixth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- <div class="dealItem"></div>
-        <div class="dealItem"></div>
-        <div class="dealItem"></div>
-        <div class="dealItem"></div>
-        <div class="dealItem"></div> -->
-    </div>
-    <div class="deal">
-      <h1>Attractive Deals</h1>
-      <hr />
-      <div class="owl-carousel owl-theme">
-        <div class="item" id="first">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="second">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="third">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="fourth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="fifth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-        <div class="item" id="sixth">
-          <img
-            src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSJbEwjLnd3dDMRkXb89A1YyG8jbaE-jHjeEYh078s3GP3_H0RDOXImB5BaQZT4ngBiwgcdbGDG4BiAeIII9qvKR4a5A0qsJJ-3znJ3ruGDnuOxck6E3rhC&usqp=CAc"
-            alt="clothes"
-          />
-          <div>
-            <p>Blue T-Shirt Men</p>
-            <span>Min 77% off</span>
-          </div>
-        </div>
-      </div>
+    <div id="mainsection">
+      <div id="filterBox"></div>
+      <div id="showText"></div>
+      <div id="dataFilter"></div>
+      <div id="productListing"></div>
     </div>
     <footer>
       <div id="mainFoot">
