--- a/bootstrap/first.html
+++ b/bootstrap/first.html
@@ -10,6 +10,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="first.css" />
   </head>
   <body>
     <div class="container">
@@ -22,11 +23,43 @@
           voluptates ea nulla eveniet!
         </p>
         <a href="#" class="btn btn-success">Link for code</a>
-        <button class="btn btn-primary">Click</button>
+        <button class="btn btn-primary btn-plum">Click</button>
         <button class="btn btn-danger">Click</button>
         <button class="btn btn-warning">Click</button>
         <button class="btn btn-info">Click</button>
+        <button class="btn btn-primary">Click</button>
       </div>
+
+      <div class="panel panel-primary">
+        <div class="panel-heading">Students</div>
+        div.b
+      </div>
+      <table class="table table-hover table-border">
+        <thead>
+          <tr>
+            <th>RollNo</th>
+            <th>Name</th>
+            <th>Class</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="success">
+            <td>1</td>
+            <td>Amit</td>
+            <td>UI</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Nikita</td>
+            <td>React</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Arush</td>
+            <td>Angular</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
